@@ -64,6 +64,7 @@ typedef CTX* Fl__ValueInput;
 typedef CTX* Fl__Slider;
 typedef CTX* Fl__FillSlider;
 typedef CTX* Fl__HorFillSlider;
+typedef CTX* Fl__NiceSlider;
 typedef CTX* Fl__HorNiceSlider;
 typedef CTX* Fl__HorSlider;
 
