@@ -6,6 +6,7 @@ Revision history for Perl extension Fl
         - Fl::Slider - Contains a sliding knob inside a box
         - Fl::FillSlider - Filled Vertical Slider. Useful as a progress or value meter
         - Fl::HorFillSlider - Fl::FillSlider but horizontal
+        - Fl::NiceSlider - Fl::Slider with an easy grab handle
         - Fl::HorNiceSlider - Fl::NiceSlider but horizontal
         - Fl::HorSlider - Horizontal Fl::Slider
 
